--- a/index.css
+++ b/index.css
@@ -1,8 +1,10 @@
-.main-header {
+.header {
     color:rgb(20, 13, 105);
     text-align: center;
-    font-size:xx-large;
     font-family: "Coming Soon";
+    font-weight:500;
+    font-size: 45pt;
+    font-display: flex;
     text-shadow: 3px 3px 3px white;
 }
 
