--- a/index.css
+++ b/index.css
@@ -107,52 +107,26 @@
   }
   
   /* end of bubble animation css... i changed bubble colors and added a second color to random sections.*/
- /* creating image variables */
 
+ /* creating image variables0... if I can ever get them on there */
  :root { 
     --orca: url('/images/orca.png');
     --sealion: url('/images/sealion.png');
     --rays: url('/images/rays.png');
     --seaturtle: url('/images/seaturtle.png');
 }
-
+ /* css for basic page */
 body {
     background-color: rgb(185, 220, 238);
     font-family: "Coming Soon";
     box-sizing: border-box;
-}
-
-/* start window */
-.container{
-    display: flex;
     justify-content: center;
-    flex-direction: column;
-    align-items: center;
 }
 
-.open-game .character .img > img {
-    cursor: pointer;
-}
-
-.open-game .character .img > img:hover {
-    background-color: white;
-}
-
-.open-game.hide {
-    display: none;
-}
-
-.open-game {
-    height: 50vh;
+.centerButton {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
-}
-
-.currentAnimalImage {
-    width: 95px;
-    height: auto;
+    flex-direction: column;
 }
 
 .header {
@@ -162,6 +136,11 @@ body {
     font-size: 45pt;
     font-display: flex;
     text-shadow: 3px 3px 3px white;
+}
+
+.animalImage {
+    width: 125px;
+    height: auto;
 }
 
 .game-header {
@@ -175,7 +154,8 @@ body {
     display: grid;
     justify-content: center;
     grid-template-columns: 100px 100px 100px;
-    border: 1px, solid
+    border: 1px, dashed;
+    cursor:pointer;
 }
     
 .cell {
@@ -187,14 +167,31 @@ body {
     align-items: center;
     color: rgb(20, 13, 105);
     text-shadow: 3px 3px 3px white;
+    cursor: pointer;
+    background-color: white;
+    opacity: 50%;
 }
 
-.centerButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+#endMessage {
+    color:  rgb(16, 12, 62);
+    margin: 20px;
+    font-size: large;
 }
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: block;
+}
+
+.footer-text {
+    font-size: x-small;
+    margin-left: 10px;
+    font-style: italic;
+}
+
 
 /* .cell.x, .cell.x2,
 .cell.y, .cell.y2{
