--- a/index.css
+++ b/index.css
@@ -3,14 +3,14 @@
     position:absolute;
     width:100%;
     height: 100%;
-    z-index:0;
+    z-index:-1;
     overflow:hidden;
     top:0;
     left:0;
   }
   .bubble{
     position: absolute;
-    bottom:-100px;
+    bottom: -100px;
     width:40px;
     height: 40px;
     background: rgb(51, 51, 92);
@@ -127,7 +127,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(172, 206, 229);
+    background: radial-gradient(ellipse at top, #6473a2, transparent),            radial-gradient(ellipse at bottom, #79acd8, transparent);
+    background-color: rgb(172, 214, 229);
     font-family: "Coming Soon";
     text-shadow: 2px 2px 2px white;
     color:rgb(20, 13, 105);
@@ -142,7 +143,7 @@
 .header {
     color:rgb(20, 13, 105);
     text-align: center;
-    font-weight:500;
+    font-weight:bolder;
     font-size: 45pt;
     font-display: flex;
     text-shadow: 3px 3px 3px white;
@@ -178,7 +179,6 @@
     color: rgb(20, 13, 105);
     background-color: rgba(255, 255, 255, 0.5);
 }
-  
  
 #endGame {
     text-align: center;
@@ -188,8 +188,8 @@
 }
   
 .start-btn {
-    background-color: transparent;
-    border: 1px solid white;
+    background-color: white;
+    border: 2px solid rgb(20, 13, 105);
     padding: 10px;
     color:rgb(20, 13, 105)
 }
@@ -218,4 +218,3 @@
     font-style: italic;
     align-items: left;
 }
-  
