--- a/index.css
+++ b/index.css
@@ -152,22 +152,27 @@ body {
 .playerMessage {
     text-align: center;  
     font-weight:bolder;
-    font-size: 25pt;
-    border: 1px solid rgb(20, 13, 105);
-    background-color: rgba(255, 255, 255, 0.25);
-    padding: 25px;
-    margin: 50px;
+    font-size: 20pt;
     color:rgb(20, 13, 105); 
+    font-style:italic;
 }
 
 .animalGroup {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top:15px;
+}
+
+.animalGroupBottom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 50px;
 }
 
 .animalImage {
-    width: 125px;
+    width: 150px;
     height: auto;
 }
 
@@ -203,7 +208,7 @@ body {
     border: 1px solid rgb(20, 13, 105);
     background-color: rgba(255, 255, 255, 0.25);
     padding: 25px;
-    margin: 50px;
+    margin-top: 50px;
     color:rgb(20, 13, 105);
 }
   
